--- a/trunk/src/main/webapp/resources/styles/typo.css
+++ b/trunk/src/main/webapp/resources/styles/typo.css
@@ -16,19 +16,13 @@
 	}
 	
 /* LINKS */
-	a,
-	a:link 
-	a:active {
-		color: blue;
+	a, a:link, a:active, a:visited {
+		color: #4e8ab9;
 		background-color: transparent;
-		text-decoration: underline;
-	}
-	a:visited {
-		color: purple;
-		background-color: transparent;
+		text-decoration: none;
 	}
 	a:hover {
-		text-decoration: none;
+		text-decoration: underline;
 	}
 /* END LINKS */
 	
